// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render block with schema 1`] = `
"<section class=\\"blockCollection\\">
  <div class=\\"sortableBlockList\\">
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text 1</label><input type=\\"text\\" value=\\"Test 1\\"><label class=\\"errorLabel\\"></label></div>
            </div>
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text 2</label><input type=\\"text\\" value=\\"Test 2\\"><label class=\\"errorLabel\\"></label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text 1</label><input type=\\"text\\" value=\\"Test 3\\"><label class=\\"errorLabel\\"></label></div>
            </div>
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text 2</label><input type=\\"text\\" value=\\"Test 4\\"><label class=\\"errorLabel\\"></label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div><button class=\\"button secondary\\" type=\\"button\\"><span aria-label=\\"su-plus\\" class=\\"buttonIcon su-plus\\"></span><span class=\\"text\\">sulu_admin.add_block</span></button>
</section>"
`;

exports[`Render block with schema and error on fields already being modified 1`] = `
"<section class=\\"blockCollection\\">
  <div class=\\"sortableBlockList\\">
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text</label><input type=\\"text\\" value=\\"Test1\\"><label class=\\"errorLabel\\"></label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field error\\"><label class=\\"label\\">Text</label><input class=\\"minLength\\" type=\\"text\\" value=\\"T2\\"><label class=\\"errorLabel\\">sulu_admin.error_minlength</label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text</label><input type=\\"text\\" value=\\"T3\\"><label class=\\"errorLabel\\"></label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div><button class=\\"button secondary\\" type=\\"button\\"><span aria-label=\\"su-plus\\" class=\\"buttonIcon su-plus\\"></span><span class=\\"text\\">sulu_admin.add_block</span></button>
</section>"
`;

exports[`Render block with schema and error on fields already being modified 2`] = `
"<section class=\\"blockCollection\\">
  <div class=\\"sortableBlockList\\">
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field\\"><label class=\\"label\\">Text</label><input type=\\"text\\" value=\\"Test1\\"><label class=\\"errorLabel\\"></label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field error\\"><label class=\\"label\\">Text</label><input class=\\"minLength\\" type=\\"text\\" value=\\"T2\\"><label class=\\"errorLabel\\">sulu_admin.error_minlength</label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <section class=\\"block expanded\\">
      <div class=\\"handle\\"><span aria-label=\\"su-more\\" class=\\"sortableHandle su-more\\"></span></div>
      <div class=\\"content\\">
        <header class=\\"header\\">
          <div class=\\"icons\\"><span aria-label=\\"su-trash-alt\\" class=\\"su-trash-alt clickable\\" role=\\"button\\" tabindex=\\"0\\"></span><span aria-label=\\"su-times\\" class=\\"su-times clickable\\" role=\\"button\\" tabindex=\\"0\\"></span></div>
        </header>
        <article>
          <div class=\\"grid grid\\">
            <div class=\\"item gridItem size size-12 space-before-0 space-after-0\\">
              <div class=\\"field error\\"><label class=\\"label\\">Text</label><input class=\\"minLength\\" type=\\"text\\" value=\\"T3\\"><label class=\\"errorLabel\\">sulu_admin.error_minlength</label></div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div><button class=\\"button secondary\\" type=\\"button\\"><span aria-label=\\"su-plus\\" class=\\"buttonIcon su-plus\\"></span><span class=\\"text\\">sulu_admin.add_block</span></button>
</section>"
`;
